Wed Nov  5 22:05:19 2003  Matthias Clasen  <maclas@gmx.de>

	* glib/gi18n-lib.h: 
	* glib/gi18n.h: New headers defining common gettext-support
	macros.

	* glib/Makefile.am (glibsubinclude_HEADERS): Add gi18n.h
	and gi18n-lib.h.

	* glib/gstrfuncs.h: 
	* glib/gstrfuncs.c (g_strip_context): Auxiliary function for
	the implementation of Q_().

2003-11-05  Morten Welinder  <terra@gnome.org>

	* glib/garray.c (g_ptr_array_remove_range): Make it compile.
	(#119337, self.)

	* glib/gstring.c (g_string_insert_len): Handle the case where the
	to-be-inserted string is a substring of the target string.
	(g_string_assign): Handle "s = s;".
	(#114260, self.)

Sun Nov  2 01:47:31 2003  Matthias Clasen  <maclas@gmx.de>

	Fix 64bit printing for MSVC builds (#119292, Hans Breuer):
	
	* configure.in (HAVE_INT64_AND_I64): Define for MSVC to 
	include support for printing __int64 with format %I64 in 
	the gnulib printf wrappers. 
	* glib/gnulib/printf-args.h (enum arg_type): Add TYPE_INT64 
	and TYPE_UINT64.
	* glib/gnulib/printf-args.h (struct argument): Add a_int64 and 
	a_uint64 members.
	* glib/gnulib/printf-args.c (printf_fetchargs): Support
	TYPE_INT64 and TYPE_UINT64.
	* glib/gnulib/printf-parse.c (printf_parse): Parse I64 format
	modifier and map formats to TYPE_INT64.
	* glib/gnulib/vasnprintf.c (vasnprintf): Print TYPE_INT64 with
	format modifier I64.
	* glib/gnulib/README: Document the __int64 support.
	
Sat Nov  1 08:45:38 2003  Owen Taylor  <otaylor@redhat.com>

	* glib/gmain.c (g_main_context_iterate): Set the
	return value from the result of g_main_context_check()
	(after we poll) rather than g_main_context_prepare.
	(#121675, Padraig O'Briain)

Fri Oct 31 00:13:53 2003  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Remove the semicolon from the definition of
	g_once(), so that GPOINTER_TO_INT (g_once (...)) works.

Tue Oct 28 23:38:30 2003  Matthias Clasen  <maclas@gmx.de>

	* tests/printf-test.c: Change the %e tests to not check for